RESOLVED FIXED141669
REGRESSION (r176459): Process suspension cleanup timer sometimes never stops
https://bugs.webkit.org/show_bug.cgi?id=141669
Summary REGRESSION (r176459): Process suspension cleanup timer sometimes never stops
Tim Horton
Reported 2015-02-16 15:20:23 PST
Created attachment 246688 [details] patch r176459 accidentally removed the code to stop the cleanup timer in the case where we successfully finish marking layers volatile, causing the timer to continue running once the process comes back from a suspended state.
Attachments
patch (1.38 KB, patch)
2015-02-16 15:20 PST, Tim Horton
simon.fraser: review+
Simon Fraser (smfr)
Comment 1 2015-02-16 15:21:33 PST
Comment on attachment 246688 [details] patch Testable?
WebKit Commit Bot
Comment 2 2015-02-16 15:22:14 PST
Attachment 246688 [details] did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2015-02-16 15:22:47 PST
I don't think we have any infrastructure for testing process suspension (nor would I have any idea how to test that a timer that has negligible functional impact *isn't* firing).
Tim Horton
Comment 4 2015-02-16 15:24:30 PST
Note You need to log in before you can comment on or make changes to this bug.