REGRESSION (r176459): Process suspension cleanup timer sometimes never stops https://bugs.webkit.org/show_bug.cgi?id=141669

Reviewed by Simon Fraser.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::markAllLayersVolatileIfPossible):
r176459 accidentally removed the code to stop the cleanup timer
in the case where we successfully finish marking layers volatile,
causing the timer to continue running once the process comes back
from a suspended state.


Canonical link: https://commits.webkit.org/159696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180180 268f45cc-cd09-0410-ab3c-d52691b4dbfc